--- a/13_formation/templates/a.html
+++ b/13_formation/templates/a.html
@@ -2,11 +2,18 @@
 <html>
   <head>
     <title>bazinga</title>
+    <style>
+      div {font-family: "Comic Sans MS";}
+    </style>
   </head>
   <body>
-    <form action="/auth">
-      <input type="text-area" size=100 placeholder="what is your favorite time sheldon from big bang theory says bazinga after he pranks his friend le ebic style????" name="bazinga"/>
-      <input type="submit" name="s" value="bazinga!!"/>
-    </form>
+    <div align = "center" font="Sans">
+      <h1><b>BAZINGA BAZINGA BAZINGA. (BAZINGA BAZINGA BAZINGA, BAZINGA!!!!!)</b></h1>
+      <img src="static/bazinga.jpg"/><br/><br/>
+      <form action="/auth">
+	<input type="text-area" size=20 placeholder="Bazinga?" name="bazinga"/>
+	<br/><br/><input type="submit" name="s" value="Bazinga!"/>
+      </form>
+    <div
   </body>
 </html>
