--- a/13_formation/templates/a.html
+++ b/13_formation/templates/a.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>bazinga</title>
+    <title>Mr. Sheldon Bazinga's Epic Website</title>
     <style>
       div {font-family: "Comic Sans MS";}
     </style>
   </head>
   <body>
     <div align = "center" font="Sans">
-      <h1><b>BAZINGA BAZINGA BAZINGA. (BAZINGA BAZINGA BAZINGA, BAZINGA!!!!!)</b></h1>
+      <h1><b>Sheldon Bazinga's Epic Website. (ONLY FOR SHELDON BAZINGA YOU NERDS!!!!!)</b></h1>
       <img src="static/bazinga.jpg"/><br/><br/>
       <form action="/auth">
-	<input type="text-area" size=20 placeholder="Bazinga?" name="bazinga"/>
+	<input type="text-area" size=20 placeholder="Your name" name="bazinga"/>
 	<br/><br/><input type="submit" name="s" value="Bazinga!"/>
       </form>
     <div
