--- a/13_formation/templates/a.html
+++ b/13_formation/templates/a.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div align = "center" font="Sans">
-      <h1><b>Sheldon Bazinga's Epic Website. (ONLY FOR SHELDON BAZINGA YOU NERDS!!!!!)</b></h1>
+      <h1><b>Mr. Sheldon Bazinga's Epic Website. (ONLY FOR Mr. Sheldon Bazinga YOU NERDS!!!!!)</b></h1>
       <img src="static/bazinga.jpg"/><br/><br/>
       <form action="/auth">
 	<input type="text-area" size=20 placeholder="Your name" name="bazinga"/>
