--- a/13_formation/templates/b.html
+++ b/13_formation/templates/b.html
@@ -9,14 +9,14 @@
   <body>
     <div align="center">
       {% if a == "Mr. Sheldon Bazinga" %}
-      <h1><b>Welcome, Master Mr. Sheldon Bazinga</b></h1><br/>
+      <h1><b>Welcome, Master Mr. Sheldon Bazinga.</b></h1><br/>
       <img src="static/bazinga_happy.jpg"/><br/><br/>
-      Here is the secret image:
-      <img src="secret_image.jpg"/>
+      Here is the secret image:<br/><br/><br/><br/><br/><br/><br/><br/><br/><b>v</b><br/><br/><br/><br/><br/><br/><br/>
+      <img src="static/secret_image.jpg"/>
       {% else %}
       <h1><b>What are you trying to pull, nerd?! You're not Mr. Sheldon Bazinga, you're {{ a }}!</b></h1><br/>
       <img src="static/bazinga_angry.jpg"/><br/><br/>
-      GET OUT OF HERE BEFORE SOMEBODY (BY WHICH I MEAN YOU, OBVIOUSLY) GETS BAZINGA'D ON EPIC STYLE
+      <a href="/">GET OUT OF HERE BEFORE SOMEBODY (BY WHICH I MEAN YOU, OBVIOUSLY) GETS BAZINGA'D ON EPIC STYLE</a>
       {% endif %}
     </div>
   </body>
