get that bazinga posted

--- a/13_formation/templates/a.html
+++ b/13_formation/templates/a.html
@@ -10,7 +10,7 @@
     <div align = "center" font="Sans">
       <h1><b>Mr. Sheldon Bazinga's Epic Website. (ONLY FOR Mr. Sheldon Bazinga YOU NERDS!!!!!)</b></h1>
       <img src="static/bazinga.jpg"/><br/><br/>
-      <form action="/auth">
+      <form action="/auth" method="POST">
 	<input type="text-area" size=20 placeholder="Your name" name="bazinga"/>
 	<br/><br/><input type="submit" name="s" value="Bazinga!"/>
       </form>
