minor edits for clarity

--- a/14_login/templates/login.html
+++ b/14_login/templates/login.html
@@ -10,10 +10,10 @@
     <br>
     <h2>Provide thy password</h2>
     <input type="password" name="pass">
-    <br>
+    <br><br>
     <input type="submit">
   </form>
   <br>
-  <h2><font color="red">{{ var1 }}
+  <h2><font color="red">{{ var1 }}</font></h2>
 </body>
 </html>
