--- a/14_login/templates/welcome.html
+++ b/14_login/templates/welcome.html
@@ -4,8 +4,8 @@
   <title>Welcome!</title>
 </head>
 <body>
-  <h2>Greetings {{ var1 }}</h2>
-  <br>
+  <h2>Greetings, {{ var1 }}</h2>
+  <br><br>
   <form action="/logout">
     <input type="submit" value="Log out">
   </form>
