--- a/15_flashinh/templates/login.html
+++ b/15_flashinh/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Log ye self in{% block title %}
+{% block title %}Log ye self in{% endblock %}
 
 {% block content %}
 <form action="/login" method="POST">
@@ -12,4 +12,4 @@
   <br><br>
   <input type="submit">
 </form>
-{% block content %}
+{% endblock %}
