--- a/24_rest/templates/bazinga.html
+++ b/24_rest/templates/bazinga.html
@@ -5,6 +5,9 @@
   </head>
   <body>
     okay, now THIS is epic<br>
-    <img src="{{earl}}"/>
+    <img src="{{earl}}"/><br>
+    <p>
+      {{desk}}
+    </p>
   </body>
 </html>
