--- a/26_rrreeesssttt/templates/bazinga.html
+++ b/26_rrreeesssttt/templates/bazinga.html
@@ -5,15 +5,10 @@
   </head>
   <body>
     okay, now THIS is epic<br>
-    <img src="{{earl}}"/><br>
     <p>
       {{desk}}
-    </p>
-    <img src="{{earl1}}"/><br>
-    <p>
-      {{desk1}}
-    </p>
-    <img src="{{earl2}}"/><br>
+    </p><br>
+    <img src="{{earl1}}"/><br><br><br>
     <p>
       {{desk2}}
     </p>
